# DQSDeformer

./: CMakeLists.txt  DQSDeformer.files  DQSDeformer.includes  DQSdeformer.cc  MotionCapt.cc  extern  helper  jointInfo
Dual-Quaternion-Skinning-Sample-Codes/: point3.hpp  quat_cu.hpp  transfo.hpp
data/: outer.ply
include/: KinectData.h  KinectData.hh  Polygon.hh  TetMesh.h  bodydeformer.hh  functions.h
src/: KinectData.cc  Polygon.cc  TetMesh.cpp
